WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55180
REGRESSION (
r77034
-
r77220
): CSS box-shadow no longer renders on PowerPC
https://bugs.webkit.org/show_bug.cgi?id=55180
Summary
REGRESSION (r77034-r77220): CSS box-shadow no longer renders on PowerPC
Kevin M. Dean
Reported
2011-02-24 13:56:01 PST
Viewing the gallery at this link is missing the box-shadow or -webkit-box-shadow rendering that existed in previous versions both in an off state and rollover state. See attached picture for how it should look.
Attachments
How it should look
(46.28 KB, image/jpeg)
2011-02-24 13:57 PST
,
Kevin M. Dean
no flags
Details
How it currently looks
(38.06 KB, image/jpeg)
2011-02-24 13:58 PST
,
Kevin M. Dean
no flags
Details
Patch
(1.55 KB, patch)
2011-04-07 17:07 PDT
,
Simon Fraser (smfr)
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin M. Dean
Comment 1
2011-02-24 13:57:31 PST
Created
attachment 83714
[details]
How it should look
Kevin M. Dean
Comment 2
2011-02-24 13:58:14 PST
Created
attachment 83716
[details]
How it currently looks
Kevin M. Dean
Comment 3
2011-02-24 14:02:43 PST
Same problem on this site:
http://www.realtybymonica.com/
3 boxes vertically going down the page on the right should have drop shadows.
Alexey Proskuryakov
Comment 4
2011-02-24 22:47:35 PST
<
rdar://problem/9052571
>
Alexey Proskuryakov
Comment 5
2011-02-24 22:48:53 PST
I cannot reproduce with a local debug build of
r79659
, so probably Leopard-only.
Simon Fraser (smfr)
Comment 6
2011-02-24 23:23:08 PST
Kevin: can you try this on 10.6?
Kevin M. Dean
Comment 7
2011-02-24 23:31:46 PST
(In reply to
comment #6
)
> Kevin: can you try this on 10.6?
I can't directly (PPC only here), but I'll have a friend of mine check a webkit build on Friday under 10.6.
Kevin M. Dean
Comment 8
2011-02-25 08:18:47 PST
(In reply to
comment #6
)
> Kevin: can you try this on 10.6?
Just had it checked with the latest nightly and it looks fine in Snow Leopard.
Simon Fraser (smfr)
Comment 9
2011-03-01 17:11:58 PST
Looks fine on Leopard, on intel. Maybe PPC-only?
Kevin M. Dean
Comment 10
2011-03-22 19:27:48 PDT
Any further thoughts on this. I guess it could be PPC only, but it used to work.
Simon Fraser (smfr)
Comment 11
2011-03-22 20:44:37 PDT
Yeah, it's PPC-only.
Kevin M. Dean
Comment 12
2011-03-31 21:43:35 PDT
In case it helps, text-shadow appears to be working while box-shadow still hasn't worked for 2 months.
Simon Fraser (smfr)
Comment 13
2011-04-07 17:07:46 PDT
Created
attachment 88738
[details]
Patch
Ariya Hidayat
Comment 14
2011-04-07 17:54:12 PDT
Martin, do you remember why the endianness check was necessary?
Simon Fraser (smfr)
Comment 15
2011-04-07 17:59:09 PDT
(In reply to
comment #14
)
> Martin, do you remember why the endianness check was necessary?
It will be necessary for ContextShadow, that blurs the ImageBuffer bits directly, if your platform stores pixels in an endian-sensitive way.
Martin Robinson
Comment 16
2011-04-08 09:21:26 PDT
Comment on
attachment 88738
[details]
Patch Hopefully Cairo ports can soon switch to ShadowBlur.
Simon Fraser (smfr)
Comment 17
2011-04-08 16:55:15 PDT
http://trac.webkit.org/changeset/83358
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug