2011-04-07  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Martin Robinson.

        REGRESSION (r77034-r77220): CSS box-shadow no longer renders on PowerPC
        https://bugs.webkit.org/show_bug.cgi?id=55180

        The endianness #ifdef in ShadowBlur was unnecessary and harmful. The
        data we get back from ImageBuffer::getImageData() do not vary in
        endianness.

        * platform/graphics/ShadowBlur.cpp:
        (WebCore::ShadowBlur::blurLayerImage):

Canonical link: https://commits.webkit.org/73131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83358 268f45cc-cd09-0410-ab3c-d52691b4dbfc